Support for links between pages

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <title>Ounce</title>
   </head>
   <body>
-    <p>Welcome to Ounce, the minimal Ruby server!
+    <p>Welcome to Ounce, the minimal Ruby server!</p>
+    <a href="about.html">More about Ounce</a>
   </body>
 </html>
