Support for CSS

--- a/www/about.html
+++ b/www/about.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>About Ounce</title>
+    <link rel="stylesheet" type="text/css" href="css/about.css">
   </head>
   <body>
     <p>Ounce aims to be just a simple learning experiment.</p>
