--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Ounce</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
     <p>Welcome to Ounce, the minimal Ruby server!</p>
